Ajustando layout padrão

--- a/dev/pug/layout.pug
+++ b/dev/pug/layout.pug
@@ -16,6 +16,7 @@ html(lang="pt-br")
         block content
 
         //- Bibliotêcas e APIs nescessárias
+        script(src="./js/jquery.min.js")
         script(src="./js/bootstrap.min.js")
         script(src="./js/cytoscape.min.js")
         block scripts-adicionais
